# GPUDock

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: design.md
src/cmddock/: __init__.py  api.py  cli.py  config.py  database.py  emailer.py  gpu.py  gpustat.py  hosts.py  models.py  process_control.py  runner.py  scheduling.py  service_state.py  web.py  worker.py
tests/: test_api.py  test_cli.py  test_database.py  test_emailer.py  test_gpu.py  test_gpustat.py  test_process_control.py  test_runner.py  test_service_state.py  test_web.py  test_worker.py
