[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmddock"
version = "0.1.0"
description = "A local command queue daemon that executes submitted commands serially."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Yijia Li" }
]
keywords = ["command-queue", "daemon", "sqlite", "fastapi", "local-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
]
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[project.scripts]
cmddock = "cmddock.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cmddock"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
